--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
             'org.junit.jupiter:junit-jupiter:5.11.1',
             'com.codeborne:selenide:7.0.0',
             'io.qameta.allure:allure-selenide:2.19.0',
-            'org.slf4j:slf4j-simple:2.0.16',
+            'org.slf4j:slf4j-simple:2.0.16'
     )
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.11.1')
 }
